# mcp-sagemath-fusion-ring

./: .gitignore  LICENSE  README.md  revision_paquete_fusion_rings_sagemath.md
.github/workflows/: publish-npm.yml  publish-pypi.yml
mcp-sagemath-server/: README.md  pyproject.toml  server.py
npm/mcp-sagemath-fusion-rings/: README.md  package.json
skills/fusion-ring-sagemath/: SKILL.md
skills/fusion-ring-sagemath/agents/: openai.yaml
skills/fusion-ring-sagemath/references/: fusion_ring_question_to_api.md  fusion_rings_package_map.md
